--- a/HTML/SECTION 1/INDEX.html
+++ b/HTML/SECTION 1/INDEX.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+<title>About Me</title>
 </head>
 <body>
-    
+<h1>Hello, I'm SANTHOSHKUMAR!</h1>
+<p>I am a web developer learning HTML. This is my first webpage!</p>
 </body>
 </html>
