--- a/HTML/SECTION 2/S02-TASK 2.html
+++ b/HTML/SECTION 2/S02-TASK 2.html
@@ -2,10 +2,14 @@
 
 <!DOCTYPE html>
 <html>
-<head>
-<title>Block vs Inline Example</title>
-</head>
-<body>
-<p>This is an <span style="color: red;">important</span> message.</p>
-</body>
+  <head>
+    <title>centeBlock vs Inline Example</title>
+  </head>
+  <body>
+    <p>
+      <center>
+        This is an <span style="color: red">important</span> message.
+      </center>
+    </p>
+  </body>
 </html>
