--- a/HTML/SECTION 2/S02-TASK 5..html
+++ b/HTML/SECTION 2/S02-TASK 5..html
@@ -1,15 +1,14 @@
-/Create an FAQ Page
-
 <!DOCTYPE html>
 <html>
-
-<head>
-<title>FAQ</title>
-</head>
-<body>
-<h1>Frequently Asked Questions</h1>
-<p>What does <abbr title="HyperText Markup Language">HTML</abbr> stand for?</p>
-<p><cite>Answer:</cite> It stands for HyperText Markup Language.</p>
-<p>Shortcut: Press <kbd>Ctrl + C</kbd> to copy text.</p>
-</body>
+  <head>
+    <title>FAQ</title>
+  </head>
+  <body>
+    <h1><center>Frequently Asked Questions</center></h1>
+    <p>
+      What does <abbr title="HYPERTEXT MARKUP LANGUAGE">HTML</abbr> stand for?
+    </p>
+    <p><cite>Answer:</cite> It stands for HyperText Markup Language.</p>
+    <p>Shortcut: Press <kbd>Ctrl + C</kbd> to copy text.</p>
+  </body>
 </html>
