--- a/HTML/SECTION 2/S02-TASK 1.html
+++ b/HTML/SECTION 2/S02-TASK 1.html
@@ -1,14 +1,14 @@
-/Create a Company Introduction Page
-
 <!DOCTYPE html>
 <html>
-<head>
-<title>ABC Corp</title>
-</head>
-<body>
-<h1>ABC Corp</h1>
-<h2>Innovating the Future</h2>
-<p>Welcome to ABC Corp, where we deliver cutting-edge technology solutions for
-businesses worldwide.</p>
-</body>
+  <head>
+    <title>ABC Corp</title>
+  </head>
+  <body>
+    <h1><center>ABC Corp</center></h1>
+    <h2><center>Innovating the Future</center></h2>
+    <p>
+      Welcome to ABC Corp, where we deliver cutting-edge technology solutions
+      for businesses worldwide.
+    </p>
+  </body>
 </html>
