--- a/HTML/SECTION 2/S02-TASK 4.html
+++ b/HTML/SECTION 2/S02-TASK 4.html
@@ -1,13 +1,19 @@
-/Format an Address
-
 <!DOCTYPE html>
 <html>
-<head>
-<title>Address Format</title>
-</head>
-<body>
-<p>John Doe<br>
-1234 Elm Street<br>
-Springfield,&nbsp;IL&nbsp;62704</p>
-</body>
+  <head>
+    <title>Address Format</title>
+  </head>
+  <body>
+    <p>
+      <center>
+        <span style="color: red;"
+        <li>
+          John Doe<br />
+          1234 Elm Street<br />
+          Springfield,&nbsp;IL&nbsp;62704
+        </span>
+        </li>
+      </center>
+    </p>
+  </body>
 </html>
