--- a/HTML/SECTION 3/S03-TASK1.HTML
+++ b/HTML/SECTION 3/S03-TASK1.HTML
@@ -4,23 +4,20 @@
     <title>To-Do List</title>
   </head>
   <body>
-    <h1>My To-Do List</h1>
+    <h1><center>My To-Do List</center></h1>
 
-    <ul>
-      <li>
-        Work
-        <ul>
-          <li>Check emails</li>
-          <li>Attend meeting</li>
-        </ul>
-      </li>
-      <li>
-        Home
-        <ul>
-          <li>Do laundry</li>
-          <li>Cook dinner</li>
-        </ul>
-      </li>
-    </ul>
+    <center>
+      Work
+
+      <center>Check emails</center>
+      <center>Attend meeting</center>
+    </center>
+
+    <center>
+      Home
+
+      <center>Do laundry</center>
+      <center>Cook dinner</center>
+    </center>
   </body>
 </html>
