--- a/HTML/SECTION 4/S04-TASK2.HTML
+++ b/HTML/SECTION 4/S04-TASK2.HTML
@@ -8,11 +8,20 @@
       <ul>
         <li><a href="#section1">Section 1</a></li>
         <li><a href="#section2">Section 2</a></li>
+        <li><a href="#section3">Section 3</a></li>
+        <li><a href="#section4">Section 4</a></li>
+        <li><a href="#section5">Section 5</a></li>
       </ul>
     </nav>
     <h2 id="section1">Section 1</h2>
     <p>This is the first section.</p>
     <h2 id="section2">Section 2</h2>
     <p>This is the second section.</p>
+    <h2 id="section3">Section</h2>
+    <p>This is the third section.</p>
+    <h2 id="section4">Section 4</h2>
+    <p>This is the four section.</p>
+    <h2 id="section5">Section 5</h2>
+    <p>This is the five section.</p>
   </body>
 </html>
