--- a/HTML/SECTION 1/S01-TASK 1.html
+++ b/HTML/SECTION 1/S01-TASK 1.html
@@ -10,7 +10,7 @@
 <h1>John Doe</h1>
 </header>
 <main>
-<p>Hello! I'm John, a passionate web developer learning HTML.</p>
+<p>Hello! I'm SANTHOSH, a passionate web developer learning HTML.</p>
 <h2>My Hobbies</h2>
 <ul>
 <li>Reading</li>
