--- a/HTML/SECTION 1/S01-TASK 2.html
+++ b/HTML/SECTION 1/S01-TASK 2.html
@@ -9,7 +9,7 @@
 <body>
 <header>
 <h1>Welcome to My Blog</h1>
-<p>Written by: Jane Doe</p>
+<p>Written by: santhoshkumar</p>
 </header>
 <article>
 <h2>Why I Love Coding</h2>
