--- a/HTML/SECTION 2/S02-TASK 1.html
+++ b/HTML/SECTION 2/S02-TASK 1.html
@@ -4,11 +4,11 @@
     <title>ABC Corp</title>
   </head>
   <body>
-    <h1><center>ABC Corp</center></h1>
+    <h1><center>SANTHOSH Corp</center></h1>
     <h2><center>Innovating the Future</center></h2>
     <p>
-      Welcome to ABC Corp, where we deliver cutting-edge technology solutions
-      for businesses worldwide.
+      Welcome to SANTHOSH Corp, where we deliver cutting-edge technology
+      solutions for businesses worldwide.
     </p>
   </body>
 </html>
