--- a/HTML/SECTION 1/S01-TASK 3.html
+++ b/HTML/SECTION 1/S01-TASK 3.html
@@ -1,17 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
-<title>XYZ Tech Solutions</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="XYZ Tech Solutions - Innovating Your World">
-</head>
-<body>
-<header>
-<h1>XYZ Tech Solutions</h1>
-</header>
-<main>
-<p>At XYZ Tech Solutions, we deliver cutting-edge technology to meet your needs.
-Join us in innovating the future.</p>
-</main>
-<footer>
+  <head>
+    <title>TECH TITNANS</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="XYZ Tech Solutions - Innovating Your World"
+    />
+  </head>
+  <body>
+    <header>
+      <h1>XYZ Tech Solutions</h1>
+    </header>
+    <main>
+      <p>
+        At tech titans , we deliver cutting-edge technology to meet your needs.
+        Join us in innovating the future.
+      </p>
+    </main>
+    <footer></footer>
+  </body>
+</html>
