--- a/HTML/SECTION 2/S02-TASK 4.html
+++ b/HTML/SECTION 2/S02-TASK 4.html
@@ -8,9 +8,9 @@
       <center>
         <span style="color: red;"
         <li>
-          John Doe<br />
-          1234 Elm Street<br />
-          Springfield,&nbsp;IL&nbsp;62704
+          SANTHOSH<br />
+          135 MANJEESWARI COLONY,<br />
+          MAHATMA GANDHI NAGAR,&nbsp;IL&nbsp;621025
         </span>
         </li>
       </center>
